crates/oxc_react_compiler/tests/snapshots/object-literal-spread-element.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-literal-spread-element.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.foo) {
		t0 = { ...props.foo };
		$[0] = props.foo;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
