crates/oxc_react_compiler/tests/snapshots/object-method-maybe-alias.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-method-maybe-alias.js
---
import { c as _c } from "react/compiler-runtime";
import { createHookWrapper, setProperty } from "shared-runtime";
function useHook(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props) {
		const x = { getX() {
			return props;
		} };
		const y = { getY() {
			return "y";
		} };
		t0 = setProperty(x, y);
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: createHookWrapper(useHook),
	params: [{ value: 0 }]
};
