crates/oxc_react_compiler/tests/snapshots/object-method-shorthand-3.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-method-shorthand-3.js
---
import { c as _c } from "react/compiler-runtime";
import { createHookWrapper, mutate } from "shared-runtime";
function useHook(a) {
	const $ = _c(2);
	let t0;
	if ($[0] !== a) {
		const x = { a };
		const obj = { method() {
			mutate(x);
			return x;
		} };
		t0 = obj.method();
		$[0] = a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: createHookWrapper(useHook),
	params: [{ x: 1 }]
};
