crates/oxc_react_compiler/tests/snapshots/object-method-shorthand-aliased-mutate-after.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-method-shorthand-aliased-mutate-after.js
---
import { c as _c } from "react/compiler-runtime";
import { createHookWrapper, mutate, mutateAndReturn } from "shared-runtime";
function useHook(t0) {
	const $ = _c(2);
	const { value } = t0;
	let obj;
	if ($[0] !== value) {
		const x = mutateAndReturn({ value });
		obj = { getValue() {
			return value;
		} };
		mutate(x);
		$[0] = value;
		$[1] = obj;
	} else {
		obj = $[1];
	}
	return obj;
}
export const FIXTURE_ENTRYPOINT = {
	fn: createHookWrapper(useHook),
	params: [{ value: 0 }]
};
