crates/oxc_react_compiler/tests/snapshots/object-method-shorthand.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-method-shorthand.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const obj = { method() {
			return 1;
		} };
		t0 = obj.method();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [
		{ x: 1 },
		{ a: 2 },
		{ b: 2 }
	]
};
