crates/oxc_react_compiler/tests/snapshots/object-properties.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-properties.js
---
function foo(a, b, c) {
	const y = { ...b.c.d };
	y.z = c.d.e;
	foo(a.b.c);
}
