crates/oxc_react_compiler/tests/snapshots/object-shorthand-method-1.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-shorthand-method-1.js
---
import { c as _c } from "react/compiler-runtime";
import { createHookWrapper } from "shared-runtime";
function useHook(t0) {
	const $ = _c(5);
	const { a, b } = t0;
	let t1;
	if ($[0] !== a) {
		t1 = function() {
			return [a];
		};
		$[0] = a;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	let t2;
	if ($[2] !== b || $[3] !== t1) {
		t2 = {
			x: t1,
			y() {
				return [b];
			}
		};
		$[2] = b;
		$[3] = t1;
		$[4] = t2;
	} else {
		t2 = $[4];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: createHookWrapper(useHook),
	params: [{
		a: 1,
		b: 2
	}]
};
